<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/Text.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/in_theatre"
            android:textSize="34sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_in_theatre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_height="128dp"
            tools:listitem="@layout/movie_preview"/>

        <TextView
            style="@style/Text.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/random_film"
            android:textSize="34sp"/>



        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/movie_card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_cover"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/cover" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/movie_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Text.Headline" />

                    <TextView
                        android:id="@+id/movie_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="5"
                        tools:text="TextView"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@+id/movie_name"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>



        <TextView
            style="@style/Text.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/popular"
            android:textSize="34sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_height="128dp"
            tools:listitem="@layout/movie_horizontal_preview"/>
    </LinearLayout>
</ScrollView>